--- a/AMERICAN QUIZ2.html
+++ b/AMERICAN QUIZ2.html
@@ -561,8 +561,8 @@ const questions = [
             }
 
               // Define audio elements for correct and wrong feedback
-    const correctSound = new Audio("https://globalsolutionsprovider.github.io/Correct-Feedback-Sound.mp3");
-    const wrongSound = new Audio("https://globalsolutionsprovider.github.io/Wrong-Feedback-Sound.mp3");
+    const correctSound = new Audio("https://globalsolutionsprovider.github.io/Correct-Feedback-Sound.wav");
+    const wrongSound = new Audio("https://globalsolutionsprovider.github.io/Wrong-Feedback-Sound.wav");
 
     function playCorrectSound() {
         correctSound.play();
