Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -136,13 +136,13 @@ button.option-d {
         }
       /* Media queries for different screen sizes */
 @media (max-width: 600px) {
-  #results-container {
+  #result-container {
     max-height: 60vh;
   }
 }
 
 @media (min-width: 601px) and (max-width: 900px) {
-  #results-container {
+  #result-container {
     max-height: 65vh;
   }
 }
@@ -374,7 +374,7 @@ a.custom-button:hover {
    
     <header>
         <div class="styled-container" style="text-align: center; font-weight: bold;">
-    Curious Explorer
+    Curious Explorer1
 </div>
     </header>
     <main>
