Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -374,12 +374,12 @@ a.custom-button:hover {
    
     <header>
         <div class="styled-container" style="text-align: center; font-weight: bold;">
-    Curious Explorer2
+    Curious Explorer3
 </div>
     </header>
     <main>
         <div id="try-again-container" style="display: none;">
-            <a class="custom-button" href="http://localhost/Screen3" style="text-align: center; font-weight: bold;">Try Again!</a>
+            <a class="custom-button" href="go:Screen3" style="text-align: center; font-weight: bold;">Try Again!</a>
         </div>
         <section id="quiz-container">
       <h2 id="quiz-title" style="text-align: center;">
