Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -374,12 +374,12 @@ a.custom-button:hover {
    
     <header>
         <div class="styled-container" style="text-align: center; font-weight: bold;">
-    Curious Explorer4
+    Curious Explorer5
 </div>
     </header>
     <main>
         <div id="try-again-container" style="display: none;">
-            <a class="custom-button" href="go:Screen3" style="text-align: center; font-weight: bold;">Try Again!</a>
+            <a class="custom-button" href="go:L1Q1Sn" style="text-align: center; font-weight: bold;">Try Again!</a>
         </div>
         <section id="quiz-container">
       <h2 id="quiz-title" style="text-align: center;">
@@ -635,7 +635,7 @@ function loadQuestion() {
 // Select global audio elements
 const correctSound = document.getElementById("correct-sound");
 const incorrectSound = document.getElementById("incorrect-sound");
-let musicSound = new Audio('http://localhost/Highway Wildflowers - Bird Creek-GEOGRAPHY.mp3'); // Replace 'path/to/music.mp3' with your actual music file path
+let musicSound = new Audio('http://localhost/Highway Wildflowers-Bird Creek-GEOGRAPHY.mp3'); // Replace 'path/to/music.mp3' with your actual music file path
 musicSound.loop = true;
 musicSound.play();          
           
