Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -379,7 +379,7 @@ a.custom-button:hover {
     </header>
     <main>
         <div id="try-again-container" style="display: none;">
-            <a class="custom-button" href=" " style="text-align: center; font-weight: bold;">Try Again!</a>
+            <a class="custom-button" href="ai2app://Screen3" style="text-align: center; font-weight: bold;">Try Again!</a>
         </div>
         <section id="quiz-container">
       <h2 id="quiz-title" style="text-align: center;">
