Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -374,7 +374,7 @@ a.custom-button:hover {
    
     <header>
         <div class="styled-container" style="text-align: center; font-weight: bold;">
-    Curious Explorer
+    Curious Explorer1
 </div>
     </header>
     <main>
