--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -635,7 +635,7 @@ function loadQuestion() {
 // Select global audio elements
 const correctSound = document.getElementById("correct-sound");
 const incorrectSound = document.getElementById("incorrect-sound");
-let musicSound = new Audio('http://localhost/Highway Wildflowers-Bird Creek-GEOGRAPHY.mp3'); // Replace 'path/to/music.mp3' with your actual music file path
+let musicSound = new Audio('http://localhost/HighwayWildflowers-BirdCreek-GEOGRAPHY.mp3'); // Replace 'path/to/music.mp3' with your actual music file path
 musicSound.loop = true;
 musicSound.play();          
           
