Geography-EXP-1.html

--- a/Geography-EXP-1.html
+++ b/Geography-EXP-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=1" name="viewport">
-    <title>Educational Quiz About America</title>
+    <title>American Educational Quiz</title>
     <style>
        html, body {
             height: 100%;
@@ -374,12 +374,12 @@ a.custom-button:hover {
    
     <header>
         <div class="styled-container" style="text-align: center; font-weight: bold;">
-    Curious Explorer1
+    Curious Explorer2
 </div>
     </header>
     <main>
         <div id="try-again-container" style="display: none;">
-            <a class="custom-button" href="ai2app://Screen3" style="text-align: center; font-weight: bold;">Try Again!</a>
+            <a class="custom-button" href=" " style="text-align: center; font-weight: bold;">Try Again!</a>
         </div>
         <section id="quiz-container">
       <h2 id="quiz-title" style="text-align: center;">
@@ -416,7 +416,7 @@ a.custom-button:hover {
   <button id="try-again-button">Try Again</button>
 </div>
         <div id="quick-revision-container">
-            <a class="custom-button">GEOGRAPHY</a>
+            <a class="custom-button">U.S. Geography</a>
         </div>
 
         <!-- Message container for thank you message -->
@@ -635,7 +635,7 @@ function loadQuestion() {
 // Select global audio elements
 const correctSound = document.getElementById("correct-sound");
 const incorrectSound = document.getElementById("incorrect-sound");
-let musicSound = new Audio('http://localhost/HighwayWildflowers-BirdCreek-GEOGRAPHY.mp3'); // Replace 'path/to/music.mp3' with your actual music file path
+let musicSound = new Audio('Thank You Jehovah'); // Replace 'path/to/music.mp3' with your actual music file path
 musicSound.loop = true;
 musicSound.play();          
           
